# opensearch-toolkits

./: LICENSE  README.md  pyproject.toml
examples/async/: aosm.py
examples/notebooks/: index.ipynb  sync_search.ipynb  tmp.ipynb
examples/sync/: index_documents.py  manager.py
scripts/: async_index_to_opensearch.py  async_index_to_opensearch_with_online.py  get_embedding.py  index_to_opensearch.py  index_to_opensearch_online.py  sample.yaml  sample_mapping.json
src/opensearch_toolkits/core/: __init__.py  client.py  indexer.py  manager.py  searcher.py
